# libsurvive

./: .clang-format  .gitignore  .gitmodules  .travis.yml  81-vive.rules  Android.mk  CMakeLists.txt  Dockerfile.ros  LICENSE  Makefile  README.md  api_example.c  calibrate.c  calibrate_client.c  data_recorder.c  glutil.c  make.ps1  pyproject.toml  sensors-readout.c  sensors_readout.c  setup.py  simple_pose_test.c  survive-buttons.c  survive-cli  survive-cli.c  survive-solver.c  survive-websocketd  survive.pc.in  survive_autocomplete.sh  test.c  travis-exclusion.lst
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build_nuget.yml  build_wheels.yml  cmake.yml  docker.yml  publish-source.yml
attic/dave/: AffineSolve  AffineSolve.c  AffineSolve.c.CHARLES  Makefile  dclapack_test  dclapack_test.c  errors.txt  fileutil.c  kalman_filter.c  ptinfo.csv
bindings/cs/: .gitignore  LibSurviveBinding.sln
bindings/python/: Makefile  button-example.py  example.py  full-example.py  graph-example.py  libsurvive.py  pysurvive.py
cmake/: FindEigen3.cmake
csharp-binding/LibSurviveBinding/: Binding.cs  LibSurviveBinding.csproj  Program.cs  config_group.cs
dave/: AffineSolve  AffineSolve.c  HMD_points.csv  Makefile  OrthoPlot.c  dclapack.h  dclapack_test  dclapack_test.c  fileutil.h  kalman_filter.c  kalman_filter.h  main.c
dave/olddata/: ptinfo.csv
dave/plot_lighthouse/: README.txt  (+4 more)
docs/: architecture.md  writing_a_poser.md
include/: disambiguator.h  survive.h
redist/: CMakeLists.txt  CNFG3D.c  CNFG3D.h  CNFGCocoaNSImageDriver.m  CNFGEGLDriver.c  CNFGFunctions.c  CNFGFunctions.h  CNFGNullDriver.c  CNFGRasterizer.h  CNFGWinDriver.c  CNFGXDriver.c  CocoaDriver.m  DrawFunctions.c  DrawFunctions.h  Makefile  RawDrawNull.c  RawDrawRasterizer.c  WinDriver.c  XDriver.c  crc32.c  crc32.h  dclapack.h  dclhelpers.c  dclhelpers.h  dirent.windows.h  glutil.h  hid-linux.c  hid-osx.c  jsmn.c  jsmn.h  jsmntest.c  json_helpers.c  json_helpers.h  linmath.c  linmath.h  lintest.c  minimal_opencv.blas.c  minimal_opencv.blas.h  minimal_opencv.c  minimal_opencv.eigen.cc  (+27 more)
redist/mpfit/: mpfit.c  mpfit.h
redist/sba/: compiler.h  sba.h  sba_chkjac.c  sba_chkjac.h  sba_crsm.c  sba_lapack.c  sba_levmar.c  sba_levmar_wrap.c
src/: CMakeLists.txt  disambiguator.c  disambiguator.h  disambiguator_charles.c  disambiguator_statebased.c  disambiguator_turvey.c  driver_crazyflie.cc  driver_dummy.c  driver_gatt.c  driver_global_scene_solver.c  driver_openvr.cc  driver_playback.c  driver_simulator.c  driver_udp.c  driver_usbmon.c  driver_vive.c  driver_vive.config.h  driver_vive.h  driver_vive.hidapi.h  driver_vive.libusb.h  force_O3.h  lfsr.c  lfsr.h  lfsr_lh2.c  lfsr_lh2.h  ootx_decoder.c  ootx_decoder.h  os_generic.c  persistent_scene.c  persistent_scene.h  poser.c  poser_barycentric_svd.c  poser_charlesrefine.c  poser_charlesslow.c  poser_daveortho.c  poser_dummy.c  poser_epnp.c  poser_general_optimizer.c  poser_general_optimizer.h  poser_imu.c  (+61 more)
src/barycentric_svd/: barycentric_svd.c  barycentric_svd.h
src/epnp/: epnp.c  epnp.h  opencv_shim.c  opencv_shim.h  shim_types_c.h  test_epnp.c  test_minimal_cv.c
src/test_cases/: CMakeLists.txt  barycentric_svd.c  check_generated.c  export_config.c  kalman.c  kalman_toy.c  main.c  optimizer.c  reproject.c  rotate_angvel.c  str.c  test_case.h  test_replays.c  watchman.c
tools/: CMakeLists.txt
tools/avr_codegen/: Makefile  test.c  test.elf  test.hex  test.lst  test.map
tools/bsd_ctrl/: Pipfile  bsd_ctrl.py
tools/combiner/: Makefile  combiner.c
tools/data_server/: Makefile  data_server.c  os_generic.c
tools/disambiguate/: .gitignore  Makefile  disambiguate.c  disambiguate2.c
tools/fbstream/: Makefile  fbstream.c  stb_image_write.h
tools/findoptimalconfig/: Makefile  findoptimalconfig.cc
tools/full_bundle_adjustment/: Makefile  full_bundle_adjustment.cc
tools/generate_math_functions/: Makefile  codegen.py  common_math.py  gen1.py  gen2.py  imu_functions.py  math_test.py  reprojection_functions.py
tools/generate_reprojection_functions/: Makefile  check_generated.c  codegen.py  common_math.py  gen1.py  gen2.py  imu_functions.py  reprojection_functions.py  reprojection_functions.sage
tools/lighthousefind/: Makefile  camfind.c  lighthousefind.c
tools/lighthousefind_radii/: Makefile  lighthousefind_radii.c
tools/lighthousefind_tori/: Makefile  find_tori_math.c  find_tori_math.h  main.c  tori_includes.h  torus_localizer.c  torus_localizer.h  visualization.c  visualization.h
tools/lightlengthparams/: Makefile  lightlengthparams.c
tools/ootx_decode/: HMD_Datagen.c  Makefile  crc32.c  crc32.h  ootx_decode.c  ootx_decoder.c  ootx_decoder.h
tools/openvr_compare/: Makefile  openvr_compare.cc
tools/openvr_driver/: CMakeLists.txt  driver.vrdrivermanifest  openvr_driver.cc
tools/openvr_driver/resources/settings/: default.vrsettings
tools/orangepitest/: Makefile  config.json  orangepitest.c
tools/planetest/: .gitignore  Makefile  camfind.c  linmath.c  linmath.h
tools/planetest2/: Makefile  camfind.c
tools/plot_lighthouse/: Makefile  fileutil.c  fileutil.h  glutil.c  glutil.h  main.c
tools/process_rawcap/: Makefile  process_to_points.c
tools/ros_publisher/: CMakeLists.txt  main.cc  make.sh  package.xml
tools/showreproject/: Makefile  showreproject.cc
tools/visualize_mpfit/: CMakeLists.txt  visualize_mpfit.c
tools/vive_mouse/: CMakeLists.txt  vive_mouse.c
tools/viz/: README.md  index.html  survive_viewer.js
tools/viz/lib/: OrbitControls.js  js-colormaps.js
useful_files/: 81-vive.rules  Docker.centos  FunctionalSystem.dia  FunctionalSystem.vsdx  TS4231_NOTES.md  additional_resources.md  benchmark_perf.py  bisect-ctest.sh  config_for_orangepi_linux_sunxi-next  evaluate_test_data.sh  generic_test.c  get_centos_deps.sh  get_version.py  leak_suppressions.txt  light_reading.md  remaster_data.sh  sample.config.json  survive-websocketd  survive-websocketd.ps1
winbuild/: build_tcc.bat  getdelim.c  hid.c  libsurvive.sln  tcc_stubs.c
windows/: build.bat  build_tcc.bat  custom_msvcrt.def  hid.c  hidapi.h  tcc_stubs.c
(+63 files in other folders)
